--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.1.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -26,8 +31,10 @@
     "@angular-devkit/build-angular": "~12.2.6",
     "@angular/cli": "~12.2.6",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/bootstrap": "^5.1.6",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "angular-in-memory-web-api": "^0.11.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
